--- a/Modality/CT/CT_practice_pytorch_SNUH.ipynb
+++ b/Modality/CT/CT_practice_pytorch_SNUH.ipynb
@@ -17,6 +17,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from google.colab import drive
+drive.mount('/content/drive')",
+   "%cd '/content/drive/My Drive/CT'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!pip install pydicom"
    ]
   },
