--- a/Modality/CT/CT_practice_pytorch_SNUH.ipynb
+++ b/Modality/CT/CT_practice_pytorch_SNUH.ipynb
@@ -17,9 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import drive",
-    "drive.mount('/content/drive')",
-    "%cd '/content/drive/My Drive/CT'"
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "%cd '/content/drive/My Drive/CT'\n"
    ]
   },
   {
