--- a/Modality/CT/CT_practice_pytorch_SNUH.ipynb
+++ b/Modality/CT/CT_practice_pytorch_SNUH.ipynb
@@ -18,8 +18,16 @@
    "outputs": [],
    "source": [
     "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "%cd '/content/drive/My Drive/CT'\n"
+    "drive.mount('/content/drive')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+     "%cd '/content/drive/My Drive/CT'"
    ]
   },
   {
