--- a/Modality/CT/CT_practice_pytorch_SNUH.ipynb
+++ b/Modality/CT/CT_practice_pytorch_SNUH.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## How to access this in Colab\n",
     "본 실습에서는 모델 학습 단에서 DICOM원본을 받기에는 용량에 한계가 있어, PNG파일을 활용합니다.\n",
-    "1. 개인 google drive에 폴더를 생성해주세요.\n",
+    "1. 개인 google drive에 CT폴더를 생성해주세요.\n",
     "2. 이 ipynb 파일과 아래 링크에서 data, dense_ckpt01 폴더를 받아서 같은 디렉토리에 저장해주세요.  \n",
     "https://drive.google.com/drive/folders/19QLnvMjG4iAbvxq7s3xjYD43keN6kHzK?usp=sharing"
    ]
