--- a/Modality/CT/CT_practice_pytorch_SNUH.ipynb
+++ b/Modality/CT/CT_practice_pytorch_SNUH.ipynb
@@ -731,7 +731,7 @@
    "outputs": [],
    "source": [
     "inv_norm_feature = inverse_normalization(features[1].permute(1, 2, 0),[(0.5,), (0.5,)], grayscale=True)\n",
-    "plt.imshow(inv_norm_feature, cmap='gray')\n",
+    "plt.imshow(inv_norm_feature[:,:,0], cmap='gray')\n",
     "plt.grid(False)\n",
     "print(labels[1])"
    ]
