Add WSI tutorial ver.1.1

--- a/Modality/WSI/handling_patho_SNUH.ipynb
+++ b/Modality/WSI/handling_patho_SNUH.ipynb
@@ -7,7 +7,45 @@
     "# **Handling digital pathology image(WSI, Whole Slide Image)**\n",
     "본 \"Handling digital pathology\" 실습은 \n",
     "digital pathology image를 딥러닝에 적용하기에 앞서  \n",
-    "간단한 patho image handling을 다룹니다."
+    "간단한 patho image handling을 다룹니다.  \n",
+    "실습에 앞서 필요한 데이터와 라이브러리를 내려받습니다.  \n",
+    "라이브러리를 모두 받은 후에 꼭 **[런타임]-[런타임 다시 시작]**을 눌러주세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget --load-cookies ~/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies ~/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1MMZMfZc1MBW3jjiRlS_Kc6XNgc7VNmeX' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1MMZMfZc1MBW3jjiRlS_Kc6XNgc7VNmeX\" -O wsi.zip && rm -rf ~/cookies.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!unzip wsi.zip -d ./wsi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!apt-get install python3-openslide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install imagecodecs"
    ]
   },
   {
@@ -48,49 +86,6 @@
    "outputs": [],
    "source": [
     "!pwd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 실습에 필요한 데이터셋 및 라이브러리 불러오기"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!wget --load-cookies ~/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies ~/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1MMZMfZc1MBW3jjiRlS_Kc6XNgc7VNmeX' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1MMZMfZc1MBW3jjiRlS_Kc6XNgc7VNmeX\" -O wsi.zip && rm -rf ~/cookies.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!unzip wsi.zip -d ./wsi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!apt-get install python3-openslide"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install imagecodecs"
    ]
   },
   {
