Add WSI tutorial ver.1.3

--- a/Modality/WSI/patho_practice_pytorch_SNUH.ipynb
+++ b/Modality/WSI/patho_practice_pytorch_SNUH.ipynb
@@ -92,14 +92,22 @@
    "source": [
     "## **Step 1. HuBMAP - Hacking the kidney**\n",
     "본 실습에서는 kaggle의 'HuBMAP Glomeruli FTU Segmentation Dataset'을 활용해  \n",
-    "디지털 병리 영상에서 `Glomeruli`를 분할하는 segmentation model 구축을 진행합니다."
+    "디지털 병리 영상에서 `Glomeruli`를 분할하는 segmentation model 구축을 진행합니다.  \n",
+    "https://www.kaggle.com/c/hubmap-kidney-segmentation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![hubmap_results](https://www.kaggleusercontent.com/kf/48229620/eyJhbGciOiJkaXIiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0..p76sWXeY0pSvsrs1AclYqQ.Tiag54E3Ek9GWEWMxx8K-IBEcJXfWqglsUWcYhwT-wczZtvD7NU_Zg7-PVaLmZH2ySMv7qVRTm2PSEctxjH4NyLcXoWm2OIdaZt2MTFs8hPUv_N3nRcrnM9yz-8nAzk2vRW5YuXvr2GlkGrE8r9kBot9ZXv3HAQC_jAflzMduqVTg8SMyLS21YB17cF6UvUB_JFS6ELbT1vVl1BvJMySehMaxhbIxSzoW1eBa4axFfwdvWtkU3iGWBwO54SNPcnSfRNHsLsg05rlu2ZtLgNGOo2tgltrCzwoS_9b9ldbI8RdoLznRraFOYHw7AyzutyhhXcOntpXwcHEL_ca9P7u8i73Hc8wUaeu_n_HVQog87mvtTqMMRYo_UT4fg87HnDNUlNOlEeW5Gnoy5RlVyCVLraxvN0CLwpFCOn1dZLiXmDFDI53382fHrEmScdBTSIkOR7xl1II2jYeC7z6dpEHEMY0KW-E7h8TlOOVRnEl2DMwGOStylnrL-gJdNmEEHLTHAgDDwgKINRAOss_TJVamjvJGVIzb7AxJQjkGNQlm8QdyHr1zpUpU3aSjsPRedZh3IvUPd8JUgGJ_20WuSm0BPtGm3qXJZR8re9l6Gb5XTJsBBGJPUmtjiaU-ObHWW37LjddNExFDhXHt4U0WwUziSnv2_SpqC7TsDBDXY36aWk.PKUuGBerlg07Mm2QkO4CsQ/__results___files/__results___24_0.png)"
+    "![hubmap_results](https://www.kaggleusercontent.com/kf/48229620/eyJhbGciOiJkaXIiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0..0EfFqtR2KRpJ4P7fgHoVIg.Z78v2tme4qFKDCFJlrIjw4IUra9v5OoE0AyRZUQ5Sl6DGoCqpMSWDLrU3bxR1zaaS7a_0fRB58gQ7XE75Vk9vlTUO8qaVk8Exy3JW8th1wQC0hlgp1PyRhVfsbWobUv2-9qyTK1Ww5o287PAPh5HROW6xMpvBSyE6WxJUiX9lxWdoRjO9ttJBoMeMio7k_DH0N3Vwr1dCdTt1qpKIns0EACWj7Kx6qWoS9F4SuQlKoj4lQMFnI8p-uGE3S5pDCApbGpcUrRdLvnrL9N1XQbB2gXfnmndMtrFwt6-LDGWdl42bJlzq9Hur5RvDUXvMmWhq8SAb492xX-y-wIm51BBKv8v0lUvwfspt6K64BWggr-c60a8RIBE7ztQVnyDqgJEoPMd8doMf0U8Apjj_ifWSA8-LQvQklrYCLJHGrRxCN4DoEKhcqZ2RZ3tA9r86hQQr0wTLpb9XIyb8w6CJsmd11QF4XUdCl6N_rpdfZcO9xAmUwemB40iTNG_jbMH8GxDTwO0IGlPIfbo3Nv5ay4tfKtIAhdGqt9VkHoG-2vmnX23aL3Of_xLFgHU48HHFnWF7PpbM-qA201oab0UbOPn5_n0tfB1AAV0EoDwLY9w9wqyByTOpomTp_bjkddyKN8_7-CXSpFNs6TwWaG6Aow5p2TJ9kYWx2ZuInscM1Q2NOU.PJl_tL1VktTAUjTWPQUY-Q/__results___files/__results___24_0.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "reference: https://www.kaggle.com/ihelon/hubmap-exploratory-data-analysis"
    ]
   },
   {
@@ -225,7 +233,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Anatomical_structure](https://www.kaggleusercontent.com/kf/47173731/eyJhbGciOiJkaXIiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0..kbWtbfjrwcMT_16WesGsfw.titc-Zr1viQxTLb-qhCko_Gv71tlX1HnY6pCQwfrFfynmbUPClTSny4G-Qyag9iMFwpi9h2Z9WhTN7OBvob0WYipYcd6ZXo2B9lO5xi1BdI5PNCBjg6xmqUbZMurP0aKMzknYbsqGIinO02VyDsPjChwMcCVn11oqwkoIm1WE1NOWHMR0ACPnDfMlEYW-uhWbXF71ASxcBgPpLuTIJZMbPa77a8VxXvFdbS97XlBgHDjffkfFvzLqTdPCdE2uSp_uKA1B8f1DA-6r6JHtnuinQueT1sCva-B0YBJYnQW-YBE-_x5KrShRvhUbmGeT0OVX9GvRdsBeCGSeE4F-i85ySqsKUJNgzFwHBjqdRnyTPcm7AnMHn2ylsasZZJmA8lggtdi0wfRCLF8pYyslxUZdyB64t7bUS2WlSmBrFJI9RnbdFhVAHM54HaZsmHYwhMzrGPYeQs4opl_Heyx-9PEdhE_8gwace61yZOWt8dqoKiA-stK_73rGpMiDWxOPeRFu6wLB6f72Z8C4jTJJvW-hogMiJpxOjGD4UOmWLcCujhxoBh-5xZA7zrJ_UbVuhseQa4V6JBhnpjAlV-qeq1Igq5UScG2b2fawYs61Bq8pS5GsCztVdk2vuPEYPW5wiC3LZ5Tzk7LCG9TvQPS7GNKcUF4Y2UDQ2E4qwK4wYAhoc4.S4P7iBq-ilrhBvOAgRZf5A/__results___files/__results___2_1.png)"
+    "![Anatomical_structure](https://www.kaggleusercontent.com/kf/47173731/eyJhbGciOiJkaXIiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0..q-BBmw8iCLU5eus2kmodNQ.0L4ZTx8opqJ45okmbMud-ycfHAyPeW6HCa6ZtukTlNPjyZpfXHIo8nLq8kE_3xrxCVsTxrd9ap0KOjmKq4CeNroqY9kk4_gRPSoWzFKJ_rehW_2IDHBTpXRgxvEUlfQyqjgTxwECcUX8X4eatGlI7B92ybYNf0rTVM45nN73zPwTyNvZKFJVmOTYKTlxRmTvOOaETigy8f29MZLtPtvqEIIz8xOPz1F-A4wmyKKht4qUOszVC6EdO-K0x7t7RxCOmWQmADFpYn-0k4FTxlRNQCDgw3o8mfmjm0MIO81oMaIYmL1QmixNbft1h613haBCL0Ee8B5EP167-O_vDySa6ZGTZONOT5vaiq6t4IyZS3ojP6AEi30l006DZ46vEKmgiIIavgLrEbGnX0iIyNdxOti2vCOZprh6Bkh4_cAQC4dh8eMyP6rqx7UvCoVWgLMNfdIApgb2xOHnWcnw5jkptSFmWhVF_0_i78W8pSNrt2iVpdCO-weFBuIB5obKv-KX2Cr-Qi-LIrbM_soi2C4aUsDpSOfR20AaxPj_LXLNhncDMoRrJgnY8ydzBh_g-FdyM51bd43KxF7ePgdeB3kIjyMnjzwDswbqqr8_DNXXvYOlgPVFTFJHKPoEUyQACQEP-QHSOyyZt4RU86xfrKrBhEW-GsRd-scuxzNXw1ySP64.v-jC0l2WA_ttSh6_KTe8XA/__results___files/__results___2_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "reference: https://www.kaggle.com/leahscherschel/dataset-details"
    ]
   },
   {
@@ -364,6 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reference code: https://www.kaggle.com/mariazorkaltseva/hubmap-seresnext50-unet-dice-loss\n",
     "def rle_encode(img):\n",
     "    '''\n",
     "    img: numpy array, 1 - mask, 0 - background\n",
@@ -961,7 +977,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train model for 50 epochs\n",
+    "# train model for 10 epochs\n",
     "epoch = 10\n",
     "max_score = 0\n",
     "\n",
