--- a/Modality/WSI/handling_patho_SNUH.ipynb
+++ b/Modality/WSI/handling_patho_SNUH.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SNUH-AIeducation/SNUH-AI-Education-for-Clinicians/blob/master/Modality/WSI/handling_patho_SNUH.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Handling digital pathology image(WSI, Whole Slide Image)**\n",
     "본 \"Handling digital pathology\" 실습은 \n",
     "digital pathology image를 딥러닝에 적용하기에 앞서  \n",
