--- a/Modality/WSI/patho_practice_pytorch_SNUH.ipynb
+++ b/Modality/WSI/patho_practice_pytorch_SNUH.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SNUH-AIeducation/SNUH-AI-Education-for-Clinicians/blob/master/Modality/WSI/patho_practice_pytorch_SNUH.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Segmentation task in digital pathology**\n",
     "디지털 병리 영상을 이용한 딥러닝 기반 segmentation 모델 구축을 진행합니다.  \n",
     "실습에 앞서 필요한 데이터와 라이브러리를 내려받습니다.  \n",
