--- a/Modality/WSI/patho_practice_pytorch_SNUH.ipynb
+++ b/Modality/WSI/patho_practice_pytorch_SNUH.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![hubmap_results](https://www.kaggleusercontent.com/kf/48229620/eyJhbGciOiJkaXIiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0..0EfFqtR2KRpJ4P7fgHoVIg.Z78v2tme4qFKDCFJlrIjw4IUra9v5OoE0AyRZUQ5Sl6DGoCqpMSWDLrU3bxR1zaaS7a_0fRB58gQ7XE75Vk9vlTUO8qaVk8Exy3JW8th1wQC0hlgp1PyRhVfsbWobUv2-9qyTK1Ww5o287PAPh5HROW6xMpvBSyE6WxJUiX9lxWdoRjO9ttJBoMeMio7k_DH0N3Vwr1dCdTt1qpKIns0EACWj7Kx6qWoS9F4SuQlKoj4lQMFnI8p-uGE3S5pDCApbGpcUrRdLvnrL9N1XQbB2gXfnmndMtrFwt6-LDGWdl42bJlzq9Hur5RvDUXvMmWhq8SAb492xX-y-wIm51BBKv8v0lUvwfspt6K64BWggr-c60a8RIBE7ztQVnyDqgJEoPMd8doMf0U8Apjj_ifWSA8-LQvQklrYCLJHGrRxCN4DoEKhcqZ2RZ3tA9r86hQQr0wTLpb9XIyb8w6CJsmd11QF4XUdCl6N_rpdfZcO9xAmUwemB40iTNG_jbMH8GxDTwO0IGlPIfbo3Nv5ay4tfKtIAhdGqt9VkHoG-2vmnX23aL3Of_xLFgHU48HHFnWF7PpbM-qA201oab0UbOPn5_n0tfB1AAV0EoDwLY9w9wqyByTOpomTp_bjkddyKN8_7-CXSpFNs6TwWaG6Aow5p2TJ9kYWx2ZuInscM1Q2NOU.PJl_tL1VktTAUjTWPQUY-Q/__results___files/__results___24_0.png)"
+    "![hubmap_results](https://github.com/SNUH-AIeducation/SNUH-AI-Education-for-Clinicians/blob/master/Modality/WSI/img/hubmap_glom.png?raw=true)"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Anatomical_structure](https://www.kaggleusercontent.com/kf/47173731/eyJhbGciOiJkaXIiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0..q-BBmw8iCLU5eus2kmodNQ.0L4ZTx8opqJ45okmbMud-ycfHAyPeW6HCa6ZtukTlNPjyZpfXHIo8nLq8kE_3xrxCVsTxrd9ap0KOjmKq4CeNroqY9kk4_gRPSoWzFKJ_rehW_2IDHBTpXRgxvEUlfQyqjgTxwECcUX8X4eatGlI7B92ybYNf0rTVM45nN73zPwTyNvZKFJVmOTYKTlxRmTvOOaETigy8f29MZLtPtvqEIIz8xOPz1F-A4wmyKKht4qUOszVC6EdO-K0x7t7RxCOmWQmADFpYn-0k4FTxlRNQCDgw3o8mfmjm0MIO81oMaIYmL1QmixNbft1h613haBCL0Ee8B5EP167-O_vDySa6ZGTZONOT5vaiq6t4IyZS3ojP6AEi30l006DZ46vEKmgiIIavgLrEbGnX0iIyNdxOti2vCOZprh6Bkh4_cAQC4dh8eMyP6rqx7UvCoVWgLMNfdIApgb2xOHnWcnw5jkptSFmWhVF_0_i78W8pSNrt2iVpdCO-weFBuIB5obKv-KX2Cr-Qi-LIrbM_soi2C4aUsDpSOfR20AaxPj_LXLNhncDMoRrJgnY8ydzBh_g-FdyM51bd43KxF7ePgdeB3kIjyMnjzwDswbqqr8_DNXXvYOlgPVFTFJHKPoEUyQACQEP-QHSOyyZt4RU86xfrKrBhEW-GsRd-scuxzNXw1ySP64.v-jC0l2WA_ttSh6_KTe8XA/__results___files/__results___2_1.png)"
+    "![Anatomical_structure](https://github.com/SNUH-AIeducation/SNUH-AI-Education-for-Clinicians/blob/master/Modality/WSI/img/anatomical_structure.png?raw=true)"
    ]
   },
   {
